--- a/Yes_Bank_Stock_Closing_Price_ML_Submission.ipynb
+++ b/Yes_Bank_Stock_Closing_Price_ML_Submission.ipynb
@@ -302,7 +302,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "There are total number of 185 rows and 5 columns"
+        "Dataset is too small as there are only Total number of 185 rows and 5 columns."
       ],
       "metadata": {
         "id": "Gpv9w997GF68"
