--- a/Yes_Bank_Stock_Closing_Price_ML_Submission.ipynb
+++ b/Yes_Bank_Stock_Closing_Price_ML_Submission.ipynb
@@ -481,19 +481,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Check Unique Values for each variable.\n",
-        "plt.figure(figsize=(7,7))\n",
-        "sns.distplot(df['Close'],color=\"y\")"
-      ],
-      "metadata": {
-        "id": "zms12Yq5n-jE"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# Write your code to make your dataset analysis ready.\n",
         "numeric_features = df.describe().columns\n",
         "numeric_features"
@@ -537,15 +524,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# **With above graphs We can see that High & Low is positively corellated with close.  And even OPEN is negatively corellated with Close.**"
-      ],
-      "metadata": {
-        "id": "LbyXE7I1olp8"
-      }
     },
     {
       "cell_type": "markdown",
@@ -922,6 +900,15 @@
       ],
       "metadata": {
         "id": "bbFf2-_FphqN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **With above graphs We can see that High & Low is positively corellated with close.**"
+      ],
+      "metadata": {
+        "id": "LbyXE7I1olp8"
       }
     },
     {
